# ipyrad2

./: .gitignore  README.md  TODO.md  environment.yml  pyproject.toml  versioning.md  workshop_environment.yml  zensical.toml
.github/workflows/: docs.yml  publish-pypi.yml
conda.recipe/: README.md  meta.yaml
docs/: index.md
docs/_templates/: README.md  command-reference.md  concept-guide.md  section-landing.md
docs/analyses/: bpp-msc.md  dapc.md  index.md  pca.md  popgen.md  wex_raxml.md
docs/assembly/: assemble.md  demux.md  denovo.md  index.md  map.md  trim.md  tutorial-PE-WGS.md  tutorial-pedic.md
docs/css/: notebook-markdown.css
docs/getting-started/: ethos.md  files-and-data-types.md  installation.md  what-is-ipyrad.md
docs/recipes/: index.md  sample-name-parsing.md  wex-recipes.md
docs/writing-outputs/: index.md  lex.md  seqex.md  snpex.md  wex.md
ipyrad2/: __init__.py  _version.py
ipyrad2/analysis/: __init__.py  bpp.py  locus_extracter.py  pca.py  snps_extracter.py  snps_imputer.py  utils.py  vcf_to_hdf5.py  window_extracter.py
ipyrad2/assembler/: __init__.py  assemble.py  beds.py  call_variants.py  delim_beds.py  hdf5_utils.py  loci.py  paralogs.py  read_filters.py  snps_db.py  sort_utils.py  variants.py  write_seqs.py  write_seqs_hdf5.py  write_snps.py
ipyrad2/classic/: __init__.py  cli_classic.py
ipyrad2/cli/: __init__.py  cli_admixture.py  cli_analysis.py  cli_assemble.py  cli_baba.py  cli_bpp.py  cli_dapc.py  cli_demux.py  cli_denovo.py  cli_inspect.py  cli_lex.py  cli_main.py  cli_map.py  cli_pca.py  cli_popgen.py  cli_seqex.py  cli_simulate.py  cli_snmf.py  cli_snpex.py  cli_treeslider.py  cli_trim.py  cli_vcf_to_hdf5.py  cli_wex.py  command_log.py  common.py  make_wide.py
ipyrad2/demuxer/: __init__.py  demux.py  demux_pipeline.py  demux_report.py  match.py  sample_names.py
ipyrad2/denovo/: __init__.py  align.py  cluster.py  common.py  denovo.py  graph.py  graph_split.py
ipyrad2/mapper/: __init__.py  legacy_map_bams.py  map_samples_prep.py  map_stats.py  mapper.py
ipyrad2/tests/: test_beds.py  test_concat.py  test_coverage_stats.py  test_loci.py  test_logger.py  test_map.py  test_map1_imap.tsv  test_map2_imap.tsv  test_names.py  test_parallel.py  test_parallel_ctrl_c.py  test_run_pipeline.py  test_seqs.py  (+3 more)
scripts/: benchmark_denovo_split.py  migrate_legacy_map_bams.py
tests/: test_analysis_admixture.py  test_analysis_baba.py  test_analysis_bpp.py  test_analysis_cluster_tools.py  test_analysis_extractors.py  test_analysis_pca.py  test_analysis_popgen.py  test_analysis_snmf.py  test_analysis_snp_imputer.py  test_analysis_snp_tools.py  test_analysis_treeslider.py  test_assemble_callable_regions.py  test_assemble_paralogs.py  test_assemble_read_filters.py  test_assembly_browser_launch.py  test_cli_analysis_help.py  test_cli_assemble_help.py  test_cli_command_log.py  test_cli_demux_help.py  test_cli_denovo_help.py  test_cli_inspect_help.py  test_cli_lazy_imports.py  test_cli_map_help.py  test_cli_trim_help.py  test_demux_interrupt.py  test_demux_matching.py  test_denovo.py  test_kmers.py  test_legacy_map_bams.py  test_map_samples_prep.py  test_map_stats.py  test_mapper.py  test_names.py  test_parallel_ctrl_c.py  test_parallel_pipeline.py  test_parallel_pool.py  test_parallel_streaming.py  test_pops.py  test_profiling.py  test_progress_logging.py  (+4 more)
(+69 files in other folders)
