[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipyrad2"
dynamic = ["version"]
requires-python = ">= 3.9"
license = { file = "LICENSE.txt" }
dependencies = [
    "loguru",
    "numpy",
    "pandas",
    "h5py",
    "tomlkit",
    "fastp",
    "vsearch",
    "mafft",
    "bwa-mem2",
    "samtools",
    "bedtools",
    "bcftools",
]
description = "Interactive assembly and analysis of RAD-seq data sets"
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["RAD", "RAD-seq", "ddRAD", "genomics", "assembly", "popgen", "phylogeny"]
classifiers =[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Development Status :: 4 - Beta",    
]
authors = [
	{name = "Deren Eaton", email="de2356@columbia.edu"},
	{name = "Isaac Overcast", email="isaac.overcast@gmail.com"},
]
maintainers = [
	{name = "Deren Eaton", email="de2356@columbia.edu"},
	{name = "Isaac Overcast", email="isaac.overcast@gmail.com"},
]

[project.optional-dependencies]
analysis = [
    "scikit-learn",
    "umap-learn",
    "toyplot",
    "toytree >= 3.0.1",
    "streamlit",
    "plotly",
]
test = [
    "pytest",
]

[project_urls]
Homepage = "https://eaton-lab.org/ipyrad2"
Documentation = "https://eaton-lab.org/ipyrad2"
Repository = "https://github.com/eaton-lab/ipyrad2"
Issues = "https://github.com/eaton-lab/ipyrad2/issues"

[project.scripts]
ipyrad2 = "ipyrad2.cli:main"
ipyrad2-classic = "ipyrad2.classic:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-data]
ipyrad2 = ["trimmer/adapters.fa"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ipyrad2*"]

[tool.setuptools_scm]
version_file = "ipyrad2/_version.py"
